# torch_mpc

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.txt  data.py  data_old.py  data_pearl.py  package.xml  setup.py
configs/: costmap_speedmap.yaml  debug.yaml  debug_valuemap.yaml  test_shortrange_config.yaml
configs/old/: cost_params.yaml  kbm_20.yaml  kbm_50.yaml
data/action_libraries/yamaha_atv/: H100_throttle_steer_unif.pt  H75_throttle_steer.pt  H75_throttle_steer_unif.pt  H75_vel_steer.pt  test_actionlib.pth
data/mppi_inputs/run_1/: backward.yaml
data/mppi_inputs/run_1/sample/: sample.pth
data/mppi_inputs/run_1/waypoints/: forward.yaml
data/mppi_inputs/run_2/: backward.yaml
data/mppi_inputs/run_2/costmaps/: metadata.yaml
data/mppi_inputs/run_2/data/: data.pth
data/mppi_inputs/run_2/steer/: steer_data.pth
data/mppi_inputs/run_3/costmaps/: metadata.yaml
data/mppi_inputs/run_3/pos/: pos_data.pth
data/mppi_inputs/run_3/waypoints/: forward.yaml
data/mppi_inputs/run_4/costmaps/: metadata.yaml
launch/: mppi.launch  mppi_shortrange.launch  mppi_throttle.launch  pitch_filterer.launch
launch/old/: mppi_multi_throttle.launch  mppi_throttle_20.launch  mppi_throttle_50.launch  mppi_throttle_main.launch  mppi_throttle_sam.launch  mppi_throttle_speedmaps.launch  mppi_throttle_tartan_20_all.launch  mppi_throttle_tartan_20_aug.launch  mppi_throttle_tartan_20_fpv.launch  mppi_throttle_tartan_20_sample.launch  mppi_throttle_tartan_50_all.launch  mppi_throttle_tartan_50_aug.launch  mppi_throttle_tartan_50_fpv.launch  mppi_throttle_tartan_50_sample.launch  mppi_warthog.launch  remove_superodom.launch  superodom_lidar.launch
models/old/: h_20_fpv_less_than_3.cpt  h_20_maps_less_than_3.cpt
models/old/all/: 20_fpv.cpt  20_maps.cpt  50_fpv.cpt  50_maps.cpt
models/old/fpv/: horizon_20.cpt  horizon_50.cpt  less_than_3_h_50.cpt
models/old/maps/: horizon_20.cpt  horizon_50.cpt
msg/: KBMParameters.msg  MPPIStats.msg  SteerSetpointKBMState.msg
scripts/action_libraries/: make_action_library.py
scripts/ros/: mppi_node.py  pitch_filterer.py  publish_goals.py
scripts/tests/: pub_dummy_costmap.py  test_traj_rotate.py
src/: setup.py
src/torch_mpc/: setup_mpc.cpp  setup_mpc.h  setup_mpc.py
src/torch_mpc/action_sampling/: CMakeLists.txt  action_sampler.cpp  action_sampler.h  action_sampler.py  visualize_samples.py
src/torch_mpc/action_sampling/sampling_data/: action_library.pt  gaussian_unif.pt  gaussian_walk.pt  u_lb.pt  u_nominal.pt  u_ub.pt
src/torch_mpc/action_sampling/sampling_strategies/: CMakeLists.txt  action_library.cpp  action_library.h  action_library.py  base.h  base.py  gaussian_walk.cpp  gaussian_walk.h  gaussian_walk.py  uniform_gaussian.cpp  uniform_gaussian.h  uniform_gaussian.py  utils.py
src/torch_mpc/algos/: CMakeLists.txt  batch_mppi.py  batch_mppi_tartan.py  batch_sampling_mpc.cpp  batch_sampling_mpc.h  batch_sampling_mpc.py  batch_sampling_mpc_master.cpp  mppi.py  sample.pth  visualize_samples.py  viz_master.py
src/torch_mpc/algos/algos_data/: COSTS.pt  GOALS.pt  TRAJ.pt  U.pt  X.pt  X_TRUE.pt  algos_dataU.pt  algos_dataX.pt  algos_datatraj.pt  traj.pt
src/torch_mpc/algos/algos_data/test1/: COSTS.pt  TRAJ.pt  U.pt  X.pt  X_TRUE.pt
src/torch_mpc/algos/algos_data/test2/: COSTMAPS.pt  COSTS.pt  GOALS.pt  TRAJ.pt  U.pt  X.pt
src/torch_mpc/algos/algos_data/test3/: COSTS.pt  GOALS.pt  TRAJ.pt  U.pt  X.pt  X_TRUE.pt
src/torch_mpc/cost_functions/: CMakeLists.txt  generic_cost_function.cpp  generic_cost_function.h  generic_cost_function.py
src/torch_mpc/cost_functions/cost_terms/: CMakeLists.txt  base.h  base.py  euclidean_distance_to_goal.cpp  euclidean_distance_to_goal.h  euclidean_distance_to_goal.py  euclidean_distance_to_multi_goal.cpp  euclidean_distance_to_multi_goal.h  euclidean_distance_to_multi_goal.py  footprint_costmap_projection.cpp  footprint_costmap_projection.h  footprint_costmap_projection.py  footprint_speedmap_projection.h  footprint_speedmap_projection.py  goal_constraint.h  goal_constraint.py  speed_limit.h  speed_limit.py  tip_over_cost.h  tip_over_cost.py  unknown_map_projection.h  unknown_map_projection.py  utils.h  utils.py  valuemap_projection.h  valuemap_projection.py
src/torch_mpc/models/: CMakeLists.txt  actuator_delay.h  actuator_delay.py  base.cpp  base.h  clifford_kinematics.py  colors.py  gravity_throttle_kbm.cpp  gravity_throttle_kbm.h  gravity_throttle_kbm.py  kbm.cpp  kbm.h  kbm.py  linear_throttle_kbm.py  multi_vel_kbm.py  pointmass.py  skid_steer.py  steer_setpoint_kbm.py  steer_setpoint_throttle_kbm.py  str_to_model.py  testkbmtest.py
src/torch_mpc/ros/: mppi_node.py  mppi_node_throttle_tartan.py  odom_tf.py  real_time_vel.py
src/torch_mpc/ros_converter/: ros_converter.py
src/torch_mpc/update_rules/: base.py  mppi.h  mppi.py
src/torch_mpc/util/: utils.py
